@@ -4,7 +4,8 @@ Changelog
 1.4.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add option to suppress creation of filebeat config.
+  [lgraf]
 
 
 1.4.1 (2018-01-10)
